src/test/ui/resolve/visibility-indeterminate.stderr
error[E0578]: cannot determine resolution for the visibility
  --> $DIR/visibility-indeterminate.rs:5:8
   |
LL | pub(in ::bar) struct Baz {}
   |        ^^^^^

error: cannot find macro `foo!` in this scope
  --> $DIR/visibility-indeterminate.rs:3:1
   |
LL | foo!();
   | ^^^

error[E0601]: `main` function not found in crate `visibility_indeterminate`
   |
   = note: consider adding a `main` function to `$DIR/visibility-indeterminate.rs`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0601`.
